src/test/resources/wacc_examples/invalid/semanticErr/imports/nestedImportFunctionAlreadyDeclared.wacc
# tries to import a file which imports a file that imports a function foo

# Output:
# Semantic error

# Program:

begin
    include "importFiles/fileThatImportsFoo.wacc"
	int foo() is
		return 0
	end
	skip
end